chore: Update deploy workflow to use GitHub token for push

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,9 @@ jobs:
           git add public/css/mu_bs.css.map
           git commit -m "Automatic Build SCSS" -a || echo "No changes to commit"
           git push origin HEAD:main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
