--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-    if: github.event.head_commit.author.email != 'action@github.com'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -24,24 +23,20 @@ jobs:
         run: npm install sass
     
       - name: Build SCSS
-        run: npx sass --source-map scss/mu_bs.scss public/css/mu_bs.css
+        run: npx sass --source-map scss/mu_bs.scss mu_bs.css
     
       - name: Upload CSS as artifact
         uses: actions/upload-artifact@v2
         with:
-          name: mu_bs.css
-          path: public/css/mu_bs.css
-    
-      - name: Commit and push changes
+          name: css-artifacts
+          path: |
+            mu_bs.css
+            mu_bs.css.map
+      
+      - name: Compare CSS files
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add public/css/mu_bs.css
-          git add public/css/mu_bs.css.map
-          git commit -m "Automatic Build SCSS" -a || echo "No changes to commit"
-          git push origin HEAD:main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          diff mu_bs.css public/mu_bs.css
+          diff mu_bs.css.map public/mu_bs.css.map
 
   deploy:
     needs: build
