chore: Update deploy workflow to use GitHub token for push and fix CSS file paths

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: GitHub Pages Deployment
 on:
   push:
     branches:
-      - main  # replace 'main' with your default branch name
+      - main
 
 jobs:
   build:
@@ -24,16 +24,19 @@ jobs:
         run: npm install sass
     
       - name: Build SCSS
-        run: npx sass scss/mu_bs.scss mu_bs.css
+        run: npx sass scss/mu_bs.scss public/css/mu_bs.css
     
       - name: Upload CSS as artifact
         uses: actions/upload-artifact@v2
         with:
           name: mu_bs.css
-          path: mu_bs.css
-      
-      - name: Compare CSS files
-        run: diff mu_bs.css public/css/mu_bs.css
+          path: public/css/mu_bs.css
+
+      - name: Create page artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          name: public
+          path: public
 
   deploy:
     needs: build
