chore: Update deploy workflow to use GitHub token for push and update Node.js version to 20

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install sass
@@ -35,7 +35,7 @@ jobs:
       - name: Create page artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          name: public
+          name: github-pages
           path: public
 
   deploy:
@@ -46,7 +46,6 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    # Specify runner + deployment step
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
